06/m06a01cmdline-handout/grading/2023-10-08-20-59-31/compile.err
UniqueArgs.java:1: error: class Matrix is public, should be declared in a file named Matrix.java
public class Matrix {
       ^
1 error
